Add Docker configuration, authentication module, and user story management
- Created .dockerignore to exclude unnecessary files from Docker builds.
- Added docker-compose.yml for service orchestration with MySQL and the application.
- Implemented Dockerfile for multi-stage builds to optimize image size.
- Introduced AuthModule for user authentication with JWT and Passport.
- Developed user registration and login functionality in AuthService.
- Enhanced StoriesModule to manage stories with CRUD operations.
- Updated README with setup instructions and API documentation.
- Added environment variable management for sensitive data.
- Implemented error handling and validation for user inputs.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,16 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
+    "rootDir": "./src",
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
